--- a/artist4all_angular/src/app/components/secure/profile/profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/profile.component.html
@@ -18,18 +18,24 @@
                   <div class="mt-6 sm:flex-1 sm:min-w-0 sm:flex sm:items-center sm:justify-end sm:space-x-6 sm:pb-1">
                     <div class="sm:hidden 2xl:block mt-6 min-w-0 flex-1">
                       <h1 class="text-2xl font-bold text-gray-900 truncate">
-                        {{ name }} {{ surname1 }}
+                        {{ username }}
+                        <a routerLink="/profile/edit" class="ml-5">
+                          <button type="button" id="edit" class="inline-flex justify-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500">
+                            <span class="-ml-1 mr-2 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                              <i class="fas fa-user-edit"></i>
+                            </span>
+                            <span>Editar</span>
+                          </button>
+                        </a>
                       </h1>
                     </div>
                     <div class="mt-6 flex flex-col justify-stretch space-y-3 sm:flex-row sm:space-y-0 sm:space-x-4">
-                      <a href="/messages"><button type="button" class="inline-flex justify-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500">
-                        <!-- Heroicon name: solid/mail -->
-
+                       <a routerLink="/messages"><button type="button" class="inline-flex justify-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500">
                         <svg class="-ml-1 mr-2 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                           <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z" />
                           <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
                         </svg>
-                        <span>Message</span>
+                        <span>Messages</span>
                       </button></a>
                     </div>
                   </div>
@@ -47,16 +53,17 @@
               <div class="border-b border-gray-200">
                 <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
                   <nav class="-mb-px flex space-x-8" aria-label="Tabs">
+
                     <!-- Current: "border-pink-500 text-indigo-600", Default: "border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300" -->
-                    <a href="#" class="border-pink-500 text-gray-900 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm" aria-current="page">
-                      Profile
-                    </a>
-                    <a href="#" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+                    <div class="border-pink-500 text-gray-900 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm" aria-current="page">
+                      Mis datos
+                    </div>
+                    <!-- <a href="#" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
                       Calendar
                     </a>
                     <a href="#" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
                       Recognition
-                    </a>
+                    </a> -->
                   </nav>
                 </div>
               </div>
@@ -67,16 +74,16 @@
               <dl class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-2">
                 <div class="sm:col-span-1">
                   <dt class="text-sm font-medium text-gray-500">
-                    Phone
+                    Nombre:
                   </dt>
                   <dd class="mt-1 text-sm text-gray-900">
-                    (555) 123-4567
+                  {{ name }}
                   </dd>
                 </div>
 
                 <div class="sm:col-span-1">
                   <dt class="text-sm font-medium text-gray-500">
-                    Email
+                    Email:
                   </dt>
                   <dd class="mt-1 text-sm text-gray-900">
                     {{ email }}
@@ -85,10 +92,10 @@
 
                 <div class="sm:col-span-1">
                   <dt class="text-sm font-medium text-gray-500">
-                    Title
+                    1r Apellido:
                   </dt>
                   <dd class="mt-1 text-sm text-gray-900">
-                    Senior Front-End Developer
+                    {{ surname1 }}
                   </dd>
                 </div>
 
@@ -103,10 +110,10 @@
 
                 <div class="sm:col-span-1">
                   <dt class="text-sm font-medium text-gray-500">
-                    Location
+                    2º Apellido:
                   </dt>
                   <dd class="mt-1 text-sm text-gray-900">
-                    San Francisco
+                    {{ surname2 }}
                   </dd>
                 </div>
 
@@ -139,7 +146,7 @@
 
                 <div class="sm:col-span-2">
                   <dt class="text-sm font-medium text-gray-500">
-                    About
+                    About me
                   </dt>
                   <dd class="mt-1 max-w-prose text-sm text-gray-900">
                     <p>
